@@ -1,58 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2017/09/12 04:00:07 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/namespace_packages.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/hgtools/__init__.py
-${PYSITELIB}/hgtools/__init__.pyc
-${PYSITELIB}/hgtools/__init__.pyo
-${PYSITELIB}/hgtools/managers/__init__.py
-${PYSITELIB}/hgtools/managers/__init__.pyc
-${PYSITELIB}/hgtools/managers/__init__.pyo
-${PYSITELIB}/hgtools/managers/base.py
-${PYSITELIB}/hgtools/managers/base.pyc
-${PYSITELIB}/hgtools/managers/base.pyo
-${PYSITELIB}/hgtools/managers/cmd.py
-${PYSITELIB}/hgtools/managers/cmd.pyc
-${PYSITELIB}/hgtools/managers/cmd.pyo
-${PYSITELIB}/hgtools/managers/library.py
-${PYSITELIB}/hgtools/managers/library.pyc
-${PYSITELIB}/hgtools/managers/library.pyo
-${PYSITELIB}/hgtools/managers/reentry.py
-${PYSITELIB}/hgtools/managers/reentry.pyc
-${PYSITELIB}/hgtools/managers/reentry.pyo
-${PYSITELIB}/hgtools/managers/subprocess.py
-${PYSITELIB}/hgtools/managers/subprocess.pyc
-${PYSITELIB}/hgtools/managers/subprocess.pyo
-${PYSITELIB}/hgtools/plugins.py
-${PYSITELIB}/hgtools/plugins.pyc
-${PYSITELIB}/hgtools/plugins.pyo
-${PYSITELIB}/hgtools/tests/__init__.py
-${PYSITELIB}/hgtools/tests/__init__.pyc
-${PYSITELIB}/hgtools/tests/__init__.pyo
-${PYSITELIB}/hgtools/tests/conftest.py
-${PYSITELIB}/hgtools/tests/conftest.pyc
-${PYSITELIB}/hgtools/tests/conftest.pyo
-${PYSITELIB}/hgtools/tests/test_git.py
-${PYSITELIB}/hgtools/tests/test_git.pyc
-${PYSITELIB}/hgtools/tests/test_git.pyo
-${PYSITELIB}/hgtools/tests/test_managers.py
-${PYSITELIB}/hgtools/tests/test_managers.pyc
-${PYSITELIB}/hgtools/tests/test_managers.pyo
-${PYSITELIB}/hgtools/tests/test_mercurial.py
-${PYSITELIB}/hgtools/tests/test_mercurial.pyc
-${PYSITELIB}/hgtools/tests/test_mercurial.pyo
-${PYSITELIB}/hgtools/tests/test_reentry.py
-${PYSITELIB}/hgtools/tests/test_reentry.pyc
-${PYSITELIB}/hgtools/tests/test_reentry.pyo
-${PYSITELIB}/hgtools/tests/test_versioning.py
-${PYSITELIB}/hgtools/tests/test_versioning.pyc
-${PYSITELIB}/hgtools/tests/test_versioning.pyo
-${PYSITELIB}/hgtools/util.py
-${PYSITELIB}/hgtools/util.pyc
-${PYSITELIB}/hgtools/util.pyo
-${PYSITELIB}/hgtools/versioning.py
-${PYSITELIB}/hgtools/versioning.pyc
-${PYSITELIB}/hgtools/versioning.pyo
